--- a/Todo.txt
+++ b/Todo.txt
@@ -2,3 +2,4 @@ make path back more direct if possible
 make lives of ants finite...they should starve if the hive does not have enough food
 add second colony of ants that are blue
 add second pheramone type (red) that indicates war
+don't allow food to spawn in home
