--- a/Todo.txt
+++ b/Todo.txt
@@ -1,5 +1,4 @@
 make path back more direct if possible
 make lives of ants finite...they should starve if the hive does not have enough food
-add second colony of ants that are blue
-add second pheramone type (red) that indicates war
 don't allow food to spawn in home
+and condition in move to simulate war if we have opposing ants in the same spot
